--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="navigation">
-      <img src="./TechnicaLogoWhite.png" height="40" />
+      <img src="/Images/TechnicaLogoWhite.png" height="40" />
       <form autocomplete="off" action="/action_page.php">
         <div class="autocomplete" style="width: 300px;">
           <input
@@ -39,7 +39,7 @@
             placeholder="Search"
           />
         </div>
-        <input type="submit" />
+        <!---<input type="submit" />--->
       </form>
       <a href="default.asp">Resources</a>
       <a href="news.asp">Explore</a>
@@ -54,7 +54,7 @@
         intolerance
       </h2>
       <form autocomplete="off" action="/action_page.php">
-        <div class="autoconflict" style="width: 300px;">
+        <div class="autoconflict" style="width: 500px;">
           <input
             id="myStuff"
             type="text"
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="card" style="width: 400px;">
-          <img class="card-img-top" src="Images/Landingcarousel/Fidelity.png" alt="Card image" />
+          <img class="card-img-top" src="Images/Landingcarousel/Investments.png" alt="Card image" />
           <div class="card-body">
             <h4 class="card-title">Fidelity Investments</h4>
             <p class="card-text">Investment Bank</p>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="card" style="width: 400px;">
-          <img class="card-img-top" src="Images/Landingcarousel/FoodServices.png" alt="Card image" />
+          <img class="card-img-top" src="Images/Landingcarousel/Foodervices.png" alt="Card image" />
           <div class="card-body">
             <h4 class="card-title">Food Services</h4>
             <p class="card-text">Boston Pizza, McDonald’s, Chick-Fil-A etc.</p>
@@ -142,7 +142,7 @@
             <h4 class="card-title">Technology</h4>
             <p class="card-text">Microsoft, Google, Spotify, Apple etc.</p>
             <a href="#" class="btn btn-primary">See Profile</a>
-          </div>
+          </div> 
       </div>
         <div class="card" style="width: 400px;">
           <img class="card-img-top" src="Images/Landingcarousel/Travel.png" alt="Card image" />
@@ -153,6 +153,26 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h4>We'll tell you what you need to know.</h4>
+          <label for="email"></label>
+          <div class ="row">
+          <input type="email" id="email" name="email">
+            <div class = "button">
+          <input type="submit">
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <img src = "Images/Landingcarousel/Mosque.png"/>
+        </div>
+      </div>
+    </div>
+    <div class ="links">
+      Made with ♥️    by Julia, Shaahana, Grace and Ayla
     </div>
     <script
       type="text/javascript"
